--- a/muLa_frontend/src/index.css
+++ b/muLa_frontend/src/index.css
@@ -3,3 +3,8 @@
     src: local('Roboto'), url(./fonts/RobotoMono-Medium.ttf) format('truetype');
     font-weight: normal;
   }
+@font-face {
+    font-family: 'ArchitectsDaughter';
+    src: local('ArchitectsDaughter'), url(./fonts/ArchitectsDaughter-Regular.ttf) format('truetype');
+    font-weight: normal;
+  }
