--- a/muLa_frontend/src/App.css
+++ b/muLa_frontend/src/App.css
@@ -259,32 +259,36 @@ margin:10vh;
 }
 
 /*///////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-
-.dashboardCard {
-  background-color: #1e3d59 !important;
-  width: 24rem;
-}
-
-.dashboardNavPills {
-  margin: auto !important;
-}
-
-.tabPaneRow {
-  padding: 10px;
-}
-
-/* .letstalkButtonCol,.mehButtonCol{
-  padding: 10px !important;
-} */
+/* Dashboard CSS Starts */
 
 .userProfilePhoto {
   max-width: 100%;
   max-height: 100%;
 }
 
+/* Dashboard CSS Ends */
 /*///////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/* Profile CSS Starts */
 
-.progressbarCharacterType {
+.profilePhoto {
+  vertical-align: middle;
+  width: 200px !important;
+  height: 200px;
+  border-radius: 50% !important;
+}
+
+.linearProgressContainer { 
+  margin-bottom: 1rem !important;
+}
+.linearProgressBar{
+    margin-bottom: 1rem !important;
+}
+
+hr {
+  width: 100%;
+}
+
+/* .progressbarCharacterType {
   height: 15px;
   background: yellow !important;
 }
@@ -296,8 +300,9 @@ body {
 }
 .main-body {
   padding: 15px;
-}
-.card {
+} */
+
+/* .card {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
 
@@ -311,15 +316,15 @@ body {
   background-clip: border-box;
   border: 0 solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
-}
+} */
 
-.card-body {
+/* .card-body {
   flex: 1 1 auto;
   min-height: 1px;
   padding: 1rem;
-}
+} */
 
-.gutters-sm {
+/* .gutters-sm {
   margin-right: -8px;
   margin-left: -8px;
 }
@@ -328,41 +333,28 @@ body {
 .gutters-sm > [class*="col-"] {
   padding-right: 8px;
   padding-left: 8px;
-}
-.mb-3,
-.my-3 {
-  margin-bottom: 1rem !important;
-}
+} */
 
-.h-100 {
+/* .h-100 {
   height: 100% !important;
-}
-.shadow-none {
-  box-shadow: none !important;
-}
+} */
 
-.card-body,
+/* .shadow-none {
+  box-shadow: none !important;
+} */
+
+/* .card-body,
 .card.mt-3,
 .list-group.list-group-flush,
 .list-group-item {
-  background-color: #1e3d59;
-}
+  background-color: #1e3d59,
+} */
 
-hr {
-  width: 100%;
-}
-
-.profilePhoto {
-  vertical-align: middle;
-  width: 200px !important;
-  height: 200px;
-  border-radius: 50% !important;
-}
-
-.alreadyHaveAccountButton {
+/* .alreadyHaveAccountButton {
   color: white;
-}
+} */
 
+/* Profile CSS Ends */
 /*///////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
 .chatbox {
