--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,13 @@
+*{
+  /* font-family: RobotoCustom !important; */
+  font-family: ArchitectsDaughter !important;
+
+}
+
 body {
   /* text-align: center !important; */
   background-color: #f5f0e1 !important;
   /* color: #f5f0e1 !important; */
-  font-family: RobotoCustom !important;
   /* font-family: ArchitectsDaughter !important; */
 }
 
@@ -169,6 +174,7 @@ margin:10vh;
   -moz-user-select: none; /* Firefox all */
   -ms-user-select: none; /* IE 10+ */
   user-select: none; /* Likely future */
+  height: 20vh;
 }
 
 .FooterIcon {
@@ -201,6 +207,8 @@ margin:10vh;
 
 .HeaderComponent {
   background-color: #1e3d59;
+  height: 6vh;
+
 }
 
 .HeaderNavLink {
@@ -255,7 +263,7 @@ margin:10vh;
 }
 
 .register-component.confirmPage {
-  width: min-content;
+  /* width: min-content; */
 }
 
 /*///////////////////////////////////////////////////////////////////////////////////////////////////////////*/
